force-app/main/default/objects/proxy_request__c/proxy_request__c.object-meta.xml
<CustomObject>
    <description>Name　=　proxy_requestのreception_seq
代理出品申込が発生後、9時～20時の間、30分に1回更新</description>
    <label>代理出品依頼管理</label>
    <nameField>
        <label>代理出品　依頼番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>