force-app/main/default/objects/proxy_request__c/fields/auc_area__c.field-meta.xml
<CustomField>
    <fullName>auc_area__c</fullName>
    <formula>Auction_Data__r.auc_area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>現在のコーナー/ステータス</label>
    <type>Text</type>
</CustomField>