force-app/main/default/objects/proxy_request__c/fields/Auction_Data__c.field-meta.xml
<CustomField>
    <fullName>Auction_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>代理出品依頼管理</relationshipLabel>
    <relationshipName>Auction_data_proxy_request</relationshipName>
    <type>Lookup</type>
</CustomField>