force-app/main/default/objects/proxy_request__c/fields/cancel_date__c.field-meta.xml
<CustomField>
    <fullName>cancel_date__c</fullName>
    <label>案件キャンセル日</label>
    <type>Date</type>
</CustomField>