force-app/main/default/objects/proxy_request__c/fields/change_reason__c.field-meta.xml
<CustomField>
    <fullName>change_reason__c</fullName>
    <label>陸送見積費用　変更理由</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>