force-app/main/default/objects/proxy_request__c/fields/client_assessment_category__c.field-meta.xml
<CustomField>
    <fullName>client_assessment_category__c</fullName>
    <label>顧客査定区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>