force-app/main/default/objects/proxy_request__c/fields/confirm_platform_number__c.field-meta.xml
<CustomField>
    <fullName>confirm_platform_number__c</fullName>
    <label>車台番号確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>