force-app/main/default/objects/proxy_request__c/fields/confirmed_request__c.field-meta.xml
<CustomField>
    <fullName>confirmed_request__c</fullName>
    <label>依頼確定フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>