force-app/main/default/objects/proxy_request__c/fields/dairi_daikou_pic__c.field-meta.xml
<CustomField>
    <fullName>dairi_daikou_pic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理代行担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>dairi_daikou_pic</relationshipName>
    <type>Lookup</type>
</CustomField>