force-app/main/default/objects/proxy_request__c/fields/delivery_date__c.field-meta.xml
<CustomField>
    <fullName>delivery_date__c</fullName>
    <label>持込日</label>
    <type>Date</type>
</CustomField>