force-app/main/default/objects/proxy_request__c/fields/delivery_time__c.field-meta.xml
<CustomField>
    <fullName>delivery_time__c</fullName>
    <label>持込時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>