force-app/main/default/objects/proxy_request__c/fields/delivery_yard__c.field-meta.xml
<CustomField>
    <fullName>delivery_yard__c</fullName>
    <label>搬入ヤード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>