force-app/main/default/objects/proxy_request__c/fields/document_status__c.field-meta.xml
<CustomField>
    <fullName>document_status__c</fullName>
    <label>書類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>