force-app/main/default/objects/proxy_request__c/fields/exhibit_count__c.field-meta.xml
<CustomField>
    <fullName>exhibit_count__c</fullName>
    <label>出品回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>