force-app/main/default/objects/proxy_request__c/fields/instructions_memo__c.field-meta.xml
<CustomField>
    <fullName>instructions_memo__c</fullName>
    <label>連絡事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>