force-app/main/default/objects/proxy_request__c/fields/member_id__c.field-meta.xml
<CustomField>
    <fullName>member_id__c</fullName>
    <label>会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>