force-app/main/default/objects/proxy_request__c/fields/member_name__c.field-meta.xml
<CustomField>
    <fullName>member_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>出品店会員名</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>代理出品依頼管理</relationshipLabel>
    <relationshipName>member_name_proxy</relationshipName>
    <type>Lookup</type>
</CustomField>