force-app/main/default/objects/proxy_request__c/fields/member_rep_name__c.field-meta.xml
<CustomField>
    <fullName>member_rep_name__c</fullName>
    <label>顧客担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>