force-app/main/default/objects/proxy_request__c/fields/member_rep_tel__c.field-meta.xml
<CustomField>
    <fullName>member_rep_tel__c</fullName>
    <label>電話番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>