force-app/main/default/objects/proxy_request__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <label>車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>