force-app/main/default/objects/proxy_request__c/fields/model_year_month__c.field-meta.xml
<CustomField>
    <fullName>model_year_month__c</fullName>
    <label>年式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>