force-app/main/default/objects/proxy_request__c/fields/notice_status__c.field-meta.xml
<CustomField>
    <fullName>notice_status__c</fullName>
    <label>落札通知書作成状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>