force-app/main/default/objects/proxy_request__c/fields/notification_filename__c.field-meta.xml
<CustomField>
    <fullName>notification_filename__c</fullName>
    <label>落札通知書ファイル名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>