force-app/main/default/objects/proxy_request__c/fields/number_of_auction__c.field-meta.xml
<CustomField>
    <fullName>number_of_auction__c</fullName>
    <label>出品回数（出品データ経由）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>