force-app/main/default/objects/proxy_request__c/fields/obic_linkage__c.field-meta.xml
<CustomField>
    <fullName>obic_linkage__c</fullName>
    <label>OBIC連携フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>