force-app/main/default/objects/proxy_request__c/fields/outputed_csv__c.field-meta.xml
<CustomField>
    <fullName>outputed_csv__c</fullName>
    <label>CSV出力フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>