force-app/main/default/objects/proxy_request__c/fields/payment_date__c.field-meta.xml
<CustomField>
    <fullName>payment_date__c</fullName>
    <label>支払日</label>
    <type>Date</type>
</CustomField>