force-app/main/default/objects/proxy_request__c/fields/payment_linkage__c.field-meta.xml
<CustomField>
    <fullName>payment_linkage__c</fullName>
    <label>支払依頼連携状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>