force-app/main/default/objects/proxy_request__c/fields/payment_num__c.field-meta.xml
<CustomField>
    <fullName>payment_num__c</fullName>
    <label>支払明細番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>