force-app/main/default/objects/proxy_request__c/fields/pickup_expected_date__c.field-meta.xml
<CustomField>
    <fullName>pickup_expected_date__c</fullName>
    <label>引取希望日</label>
    <type>Date</type>
</CustomField>