force-app/main/default/objects/proxy_request__c/fields/pickup_expected_time__c.field-meta.xml
<CustomField>
    <fullName>pickup_expected_time__c</fullName>
    <label>引取希望時間</label>
    <length>255</length>
    <type>Text</type>
</CustomField>