force-app/main/default/objects/proxy_request__c/fields/pickup_scheduled_date__c.field-meta.xml
<CustomField>
    <fullName>pickup_scheduled_date__c</fullName>
    <label>引取予定日</label>
    <type>Date</type>
</CustomField>