force-app/main/default/objects/proxy_request__c/fields/pickup_scheduled_hour__c.field-meta.xml
<CustomField>
    <fullName>pickup_scheduled_hour__c</fullName>
    <label>引取予定時間帯</label>
    <length>255</length>
    <type>Text</type>
</CustomField>