force-app/main/default/objects/proxy_request__c/fields/platform_number__c.field-meta.xml
<CustomField>
    <fullName>platform_number__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>