force-app/main/default/objects/proxy_request__c/fields/proxy_exhibition_memo__c.field-meta.xml
<CustomField>
    <fullName>proxy_exhibition_memo__c</fullName>
    <label>代理出品メモ（WEB台帳）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>