force-app/main/default/objects/proxy_request__c/fields/proxy_expense_detail_group_lot__c.field-meta.xml
<CustomField>
    <fullName>proxy_expense_detail_group_lot__c</fullName>
    <label>代理出品経費詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>