force-app/main/default/objects/proxy_request__c/fields/rec_status__c.field-meta.xml
<CustomField>
    <fullName>rec_status__c</fullName>
    <label>レコード状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>