force-app/main/default/objects/proxy_request__c/fields/reception_judge__c.field-meta.xml
<CustomField>
    <fullName>reception_judge__c</fullName>
    <label>受付判断</label>
    <length>255</length>
    <type>Text</type>
</CustomField>