force-app/main/default/objects/proxy_request__c/fields/reception_seq__c.field-meta.xml
<CustomField>
    <fullName>reception_seq__c</fullName>
    <label>受付番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>