force-app/main/default/objects/proxy_request__c/fields/recreate_notification_status__c.field-meta.xml
<CustomField>
    <fullName>recreate_notification_status__c</fullName>
    <label>請求書再作成状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>