force-app/main/default/objects/proxy_request__c/fields/reject_reason__c.field-meta.xml
<CustomField>
    <fullName>reject_reason__c</fullName>
    <label>却下理由</label>
    <length>255</length>
    <type>Text</type>
</CustomField>