force-app/main/default/objects/proxy_request__c/fields/reject_reason_detail__c.field-meta.xml
<CustomField>
    <fullName>reject_reason_detail__c</fullName>
    <label>却下理由詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>