force-app/main/default/objects/proxy_request__c/fields/rejected_date__c.field-meta.xml
<CustomField>
    <fullName>rejected_date__c</fullName>
    <label>支払除外設定日</label>
    <type>Date</type>
</CustomField>