force-app/main/default/objects/proxy_request__c/fields/request_seq__c.field-meta.xml
<CustomField>
    <fullName>request_seq__c</fullName>
    <externalId>true</externalId>
    <label>request_seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>