force-app/main/default/objects/proxy_request__c/fields/return_instruction_date__c.field-meta.xml
<CustomField>
    <fullName>return_instruction_date__c</fullName>
    <label>返品指示日</label>
    <type>Date</type>
</CustomField>