force-app/main/default/objects/proxy_request__c/fields/transport_estimate_cost__c.field-meta.xml
<CustomField>
    <fullName>transport_estimate_cost__c</fullName>
    <label>陸送見積費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>